# Camera

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ntddung/camera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nativec.cpp
app/src/main/java/com/example/ntddung/camera/: MainActivity.java
app/src/main/res/menu/: menu_main.xml
app/src/test/java/com/example/ntddung/camera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
